@@ -1,6 +1,7 @@
 ﻿0.5.1 [TBD]
 [+] Add PrepareMessageContextMiddleware, move content check and preparation to middleware.
 [+] Add EmptyMiddleware.
+[*] Exclude "$id" and "EntityKey" Entity Frameworks fields from serialization.
 
 0.5.0 [2018-05-04]
 [+] Implement throwing original exception. Look UseExceptionDispatchInfo option.
